--- a/Logged-in-version/files_for_template/template.css
+++ b/Logged-in-version/files_for_template/template.css
@@ -562,10 +562,10 @@ video{
         
     }
     20%{
-        bottom: 80px;
+        bottom: 100px;
     }
     100%{
-        bottom: 80px;
+        bottom: 100px;
         
     }
 }
@@ -629,6 +629,9 @@ video{
 .sub-dropdown-content:hover{
     background-color: rgb(99, 98, 98);
 }
+#like-svg{
+    background-color: none;
+}
 .like-and-dislike{
     display: flex;
     background-color: rgba(94, 93, 93, 0.322);
@@ -648,11 +651,20 @@ video{
     padding-left: 7px;
     cursor: pointer;
 }
+.liked{
+    display: none;
+}
+.disliked{
+    display: none;
+}
 .dislike{
     display: flex;
     padding: 7px;
     padding-right: 8px;
     cursor: pointer;
+}
+.filler-for-svg{
+    fill: white;
 }
 .like p{
     padding-left: 5px;
