--- a/Logged-in-version/files_for_template/template.css
+++ b/Logged-in-version/files_for_template/template.css
@@ -331,13 +331,14 @@ video{
     transform: translateY(60px);
     display: flex;
     gap: 2em;
-    padding-left: 70px;
-    padding-right: 70px;
+    
     
 }
 .wrapper-for-everything{
     display: grid;
     place-content: center;
+    padding-left: 70px;
+    padding-right: 70px;
 }
 .recommendations-section{
     height: fit-content;
@@ -598,7 +599,7 @@ video{
     overflow: hidden;
     padding: 7px 0px;
     transform: translateY(-130px);
-    margin-left: 145px;
+    margin-left: 185px;
     
 
 }
@@ -710,6 +711,10 @@ video{
     gap: .2em;
     background-color: rgba(94, 93, 93, 0.322);
     transform: translateY(4px);
+    cursor: pointer;
+}
+.share:hover{
+    background-color: gray;
 }
 .share img{
     filter: invert(100%) sepia(6%) saturate(0%) hue-rotate(329deg) brightness(108%) contrast(101%);
@@ -723,6 +728,7 @@ video{
     color: white;
     transform: translateY(-1px);
     padding: 3px;
+    cursor: pointer;
 }
 .download img{
     filter: invert(100%) sepia(6%) saturate(0%) hue-rotate(329deg) brightness(108%) contrast(101%);
@@ -845,10 +851,30 @@ video{
     background-color: rgb(36, 36, 36);
     border-radius: 12px;
     padding: 15px 25px;
-    position: absolute;
+    position: fixed;
+    z-index: 1000;
     width: fit-content;
     top: 35%;
-    left: 45%;
+    left: 40%;
+    
+ }
+ .unsubscribe-confirmation-dull-bg{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.274); 
+    z-index: 999; 
+ }
+ .unsubscribe-confirmation-dull-bg-2{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.274); 
+    z-index: 999; 
  }
  .unsubscribe-confirmation p{
     font-size: 15px;
@@ -884,7 +910,7 @@ video{
  .videos-container {
     display: flex;
     flex-direction: column;
-    gap: .5em;
+    gap: .3em;
     padding: 10px 10px;
     font-family: roboto;
     margin-left: -18px;
@@ -928,13 +954,13 @@ video{
 .vid-container .description{
     margin-top: 9px;
     display: flex;
-    gap: .5em;
+    gap: .3em;
     
 }
 .describe-video{
     display: grid;
     gap: .3em;
-    width: 200px ;
+    width: 210px ;
     text-overflow: ellipsis;
 }
 .vid-container .channel{
@@ -1015,4 +1041,187 @@ video{
 .description{
     display: flex;
     
+}
+.share-dropdown-wrapper{
+    position: fixed;
+    z-index: 1000;
+    top: 20%;
+    left: 35%;
+}
+.share-dropdown{
+    transform: translateY(100px);
+    width: 450px;
+    overflow: hidden;
+    background-color: rgb(27, 27, 27);
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    border-radius: 10px;
+}
+.share-top{
+    margin-right: auto;
+    margin-left: 5px;
+}
+.share-top p{
+    color: white;
+}
+.icons-section{
+    margin-top: 10px;
+    display: flex;
+    gap: .6em;
+    width: 420px;
+    overflow-x: scroll;
+    overflow-y: auto;
+    
+}
+.icons-section::-webkit-scrollbar{
+    display: none;
+}
+.slide-left-2{
+    background-color: rgb(17, 17, 17);
+    height: fit-content;
+    padding: 10px;
+    padding-top: 13px;
+    padding-right: 13px;
+    padding-left: 13px;
+    border-radius: 50%;
+    position: absolute;
+    transform: translateY(50%);
+    margin-left: -20px;
+   
+}
+.slide-right-2{
+    background-color: rgb(17, 17, 17);
+    height: fit-content;
+    padding: 10px;
+    padding-top: 13px;
+    padding-right: 13px;
+    padding-left: 13px;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 4;
+    transform: translateY(50%);
+    margin-left: 405px;
+   
+}
+.slide-left-2 img{
+    width: 15px;
+    transform: rotate(3deg);
+    filter: invert(100%) sepia(6%) saturate(0%) hue-rotate(329deg) brightness(108%) contrast(101%);
+}
+.slide-right-2 img{
+    width: 15px;
+    transform: rotate(-0.5deg);
+    filter: invert(100%) sepia(6%) saturate(0%) hue-rotate(329deg) brightness(108%) contrast(101%);
+}
+.icon{
+    height: fit-content;
+    width: fit-content;
+    border-radius: 50%;
+    overflow:hidden;
+}
+.icon img{
+    height: 65px;
+    width: 65px;
+    border-radius: 50%;
+   
+}
+.vk-flex{
+    display: flex;
+    flex-direction: column;
+    gap: .25em;
+}
+.vk{
+    display: grid;
+    place-content: center;
+}
+.vk img{
+  transform: scale(1.1);
+}
+.embed img,
+.facebook img,
+.Pinterest img,
+.skyrock img,
+.mix img,
+.goo img{
+    background-color: white;
+}
+.icon-and-description{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: fit-content;
+    height: fit-content;
+    border-radius: 5px;
+    padding: 3px;
+    cursor: pointer;
+}
+.icon-and-description:hover{
+    background-color: gray;
+}
+.icon-description p{
+    color: white;
+    font-size: 11.5px;
+    font-family: roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.input-field{
+    margin-top: 25px;
+    width: 430px;
+    background-color: rgb(10, 10, 10);
+    border: .5px solid rgba(128, 128, 128, 0.479);
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    padding: 8px;
+}
+.input-for-share-dropdown {
+    height: 20px;
+    width: 60%;
+    border: none;
+    outline: none;
+    background-color: rgb(10, 10, 10);
+    color: white;
+    border-radius: 6px;
+    padding-left: 2px;
+    transform: translateY(5px);
+}
+
+.input-for-share-dropdown:focus{
+    box-shadow: inset 0px 0px 0px 1px  white;
+}
+.copy-btn button{
+    border: none;
+    color: rgba(0, 0, 0, 0.671);
+    background-color: rgb(0, 183, 255);
+    border-radius: 2vmax;
+    padding: 8px 14px;
+    font-size: 14px;
+    font-weight: 600;
+    cursor: pointer;
+    transform: scale(1.1);
+}
+.hr{
+    margin-top: 25px;
+    width: 440px;
+    height: 1px;
+    background-color: rgba(128, 128, 128, 0.479);
+}
+.checkbox-input{
+    transform: scale(1.2);
+}
+.bottom-share-navs{
+    margin-top: 30px;
+    display: flex;
+    gap: 1em;
+    margin-right: auto;
+    margin-left: 5px;
+}
+.bottom-share-navs p{
+    color: rgb(204, 202, 202);
+}
+.bottom-share-navs span{
+    color: rgba(128, 128, 128, 0.603);
 }
