--- a/Logged-in-version/files_for_homepage/logged-in.css
+++ b/Logged-in-version/files_for_homepage/logged-in.css
@@ -48,6 +48,7 @@ body::-webkit-scrollbar-thumb:hover{
     background-color: rgb(15, 15, 15);
     height: 60px;
     padding-left: 15px;
+    overflow: hidden;
     
 }
 .burger{
@@ -85,8 +86,11 @@ body::-webkit-scrollbar-thumb:hover{
 }
 
 .logo img{
-    height: 20px;
+    height: 10px;
+    transform: scale(7.8);
+    margin-left: 31px;
 }
+
 
 .logo a{
     line-height:1.3;
@@ -118,7 +122,7 @@ body::-webkit-scrollbar-thumb:hover{
 
 .container2{
     justify-content: center;
-    width: 82%;
+    width: 78%;
     gap: 10px;
     margin-top: 8px;
 }
