--- a/Logged-in-version/files_for_template/template.css
+++ b/Logged-in-version/files_for_template/template.css
@@ -49,6 +49,7 @@ body::-webkit-scrollbar-thumb:hover{
     background-color: rgb(15, 15, 15);
     height: 60px;
     padding-left: 15px;
+    overflow: hidden;
     
 }
 .burger{
@@ -86,16 +87,14 @@ body::-webkit-scrollbar-thumb:hover{
 }
 
 .logo img{
-    height: 20px;
+    height: 10px;
+    
+    transform: scale(7.8);
+    margin-left: 31px;
 }
 
 .logo a{
-    line-height:1.3;
-    text-decoration: none;
-    color: white;
-    font-family: quicksand;
-   
-    font-weight: 800;
+   height: fit-content;
 }
 
 .container1,
