--- a/Logged-in-version/files_for_homepage/logged-in.css
+++ b/Logged-in-version/files_for_homepage/logged-in.css
@@ -122,9 +122,12 @@ body::-webkit-scrollbar-thumb:hover{
 
 .container2{
     justify-content: center;
-    width: 78%;
+    width:42.5%;
     gap: 10px;
     margin-top: 8px;
+    background-color: none;
+    
+    transform: translateX(38px);
 }
 
 
@@ -132,14 +135,14 @@ body::-webkit-scrollbar-thumb:hover{
 .searchbar{
     display: flex;
     height: 20px;
-    width: 50%;
+    width: 100%;
 }
 
 input{
     background-color: rgb(17, 17, 17);
     color: gray;
     outline: none;
-    border: 1px solid rgb(54, 54, 54);
+    border: 1px solid rgba(54, 54, 54, 0.685);
     border-right: none;
     padding-left: 15px;
     height: 38px;
@@ -182,7 +185,7 @@ input::placeholder{
 .search-button button{
     border-left: none;
     background-color: rgb(32, 32, 32);
-    border: 1px solid rgb(54, 54, 54);
+    border: 1px solid rgb(54, 54, 54, 0.685);
     border-radius: 0px 20px 20px 0px;
     width: 65px;
     height: 40px;
@@ -296,17 +299,16 @@ input::placeholder{
     background-color: rgb(15, 15, 15);
     display: flex;
     height: 55px;
-    transform: translateY(-2px);
+    transform: translateY(-3.5px);
 }
 #recommendations-links{
     margin-top: 10px;
-    height: 33px;
     display: flex;
     gap: .8em;
     list-style-type: none;
     overflow-x: scroll;
     white-space: nowrap;
-    height: 33px;
+    height: fit-content;
 }
 
 #recommendations-links::-webkit-scrollbar{
@@ -315,16 +317,18 @@ input::placeholder{
 
 .filter-button{
     outline: none;
-    font-size: 14px;
+    font-size: 13.5px;
+    font-family: roboto;
     border-radius: 8px;
     padding-top: 8px;
     padding-left: 13px;
     padding-right: 12px;
-    padding-bottom: 6px;
+    padding-bottom: 9px;
     text-decoration: none;
     color: white;
     background-color: rgb(39, 39, 39);
     cursor: pointer;
+    
     
 }
 .filter-button:hover{
@@ -414,7 +418,7 @@ input::placeholder{
     background-color: rgb(15, 15, 15);
     position: absolute;
     margin-left: 237px;
-    margin-top: -5px;
+    margin-top: -6.5px;
 }
 
 .left-nav:hover{
