--- a/Test-enviro/Test2/index.css
+++ b/Test-enviro/Test2/index.css
@@ -7,74 +7,187 @@
 }
 
 body{
-    padding: 0 20px;
-    background-color: rgb(37, 37, 37);
-   
-
+    padding: 0 0px;
 }
+/* NORMAL MODE */
 .wrapper{
-    width: calc(100% - 40px);
-    position: fixed;
-    background-color: rgb(29, 27, 27);
-    height: 1vh;
+    display: flex;
+    gap: 1.5em;
+    background-color: bisque;
+    width: 100%;
+    
+    margin:auto;
+    position: relative;
     
 }
-.navbar{
-    height: 6vh;
+.recommendations{
+    width: 420px;
+    height: 100vh;
     display: flex;
-    justify-content: space-between;
-    background-color: transparent;
+    flex-direction: column;
+    gap: .5em;
+   
+}
+.vid-container{
+    background-color: blue;
+    width: 100%;
+    height: 105px;
+}
+video{
+    width: 100%;
+
+
+}
+.theatre-mode{
+    width: fit-content;
     
-}
-
-.container{
-    background-color: rebeccapurple;
-}
-.leftnav .container{
-    height: 40px;
-    width: 200px;
-    border-radius: 12px;
-}
-
-.container-2{
-    background-color: rgb(19, 138, 118);
-    display: flex;
-    gap: 2em;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    justify-content: center;
-}
-
-.block{
-    margin-left: auto;
-    width: 85%;
-}
-.slide{
-    width: 60%;
-    overflow: scroll;
-    margin-top: 50px;
-    position: fixed;
-    display: flex;
-    white-space: nowrap;
-    gap: 1em;
-}
-.slide li{
     cursor: pointer;
-    background-color: blueviolet;
-    border-radius: 15px;
+    
+}
+.theatre-mode p{
+    background-color: azure;
+    border-radius: 8px;
     padding: 5px;
+    color: black;
 }
 
-.videos{
-    background-color: rgb(119, 20, 98);
-    height: 200px;
-    width: 400px;
-    border-radius: 15px;
-    cursor: pointer;
+.wrapper-for-video-and-description{
+    width: 70%;
+    background-color: red;
     
 }
-.videos:hover{
-    transition: .3s ease-in-out;
-    transition-delay: .7s;
-    transform: scale(1.2);
+.video-container{
+    position: relative;
+    text-align: center;
+    width: 100%;
+    background-color: black;
+    height: fit-content;
+
+    
 }
+.controls{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 40px;
+    background-color: rgba(0, 0, 255, 0.336);
+    margin-top: -40px;
+}
+.description{
+    min-width: 400px;
+    max-width: 1600px;
+    background-color: brown;
+    height: 200px;
+}
+.describe{
+    height: 100px;
+    width: 100%;
+    background-color: aqua;
+}
+@media(max-width:60em){
+    .wrapper{
+        display: flex;
+        flex-direction: column;
+        padding-right: 60px;
+    }
+    .recommendations{
+        padding-left: 60px;
+    }
+    .description{
+        min-width: 400px;
+        max-width: 1600px;
+    }
+   
+}
+
+/* NORMAL MODE */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* THEATRE MODE */
+/* .wrapper{
+    display: flex;
+    gap: 1.5em;
+}
+.recommendations{
+    width: 420px;
+    height: 100vh;
+    padding-right: 60px;
+    display: flex;
+    flex-direction: column;
+    gap: .5em;
+    margin-top: 40%;
+}
+.vid-container{
+    background-color: blue;
+    width: 100%;
+    height: 105px;
+}
+video{
+    width: 70%;
+    min-width: 500px;
+
+}
+.wrapper-for-video-and-description{
+    padding-left:0px;
+    width: 100%;
+}
+.video-container{
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    background-color: black;
+    height: fit-content;
+
+    
+}
+.description{
+    width: 100%;
+    background-color: brown;
+    height: 200px;
+    margin-top: 52%;
+    padding-left: 60px;
+    
+}
+.describe{
+    height: 100px;
+    width: 100%;
+    background-color: aqua;
+}
+@media(max-width:60em){
+    .wrapper{
+        display: flex;
+        flex-direction: column;
+    }
+    video{
+        width: 70%;
+        min-width: 400px;
+    
+    }
+    .description{
+        margin-top:40%;
+    }
+    .recommendations{
+        margin-top: 0%;
+    }
+} */
