--- a/Logged-in-version/files_for_homepage/logged-in.css
+++ b/Logged-in-version/files_for_homepage/logged-in.css
@@ -56,13 +56,14 @@ body::-webkit-scrollbar-thumb:hover{
     flex-direction: column;
     align-items: center;
     background-color: rgb(15, 15, 15);
-    height: 30px;
-    width: 30px;
+    height: 28px;
+    width: 32px;
     border-radius: 50%;
     cursor: pointer;
     padding: 4px;
-    margin-top: -8px;
-    
+    padding-top: 8px;
+    margin-top: -10px;
+    margin-left: 0px;
 }
 .burger:hover{
     background-color: rgb(59, 58, 58);
@@ -88,7 +89,7 @@ body::-webkit-scrollbar-thumb:hover{
 .logo img{
     height: 10px;
     transform: scale(7.8);
-    margin-left: 31px;
+    margin-left: 30px;
 }
 
 
@@ -276,11 +277,8 @@ input::placeholder{
     border-radius: 50%;
 }
 
-.video-plus img{
-    transform: translateY(10%);
-    height: 24px;
-    filter: invert(100%) sepia(6%) saturate(0%) hue-rotate(329deg) brightness(108%) contrast(101%);
-
+.video-plus{
+    margin-top: 4px;
 }
 
 .glyphicon-facetime-video{
@@ -289,7 +287,7 @@ input::placeholder{
 }
 
 .noti{
-    transform: translateY(5%);
+   margin-top: 4px;
 }
 .noti object{
     height: 25px;
@@ -408,8 +406,10 @@ input::placeholder{
     min-width: 220px;
     max-width: 220px;
     overflow: hidden;
-    padding-left: 15px;
+    padding-left: 10px;
     scrollbar-gutter: stable;
+    margin-top: 4px;
+    
    
 }
 .filler-between-nav-and-links{
@@ -449,24 +449,26 @@ input::placeholder{
 .hr{
     background-color: rgba(255, 255, 255, 0.671);
     height: 1px;
-    margin-top: 20px;
+    margin-top: 25px;
     opacity: .3;
+}
+.padded{
+    margin-top: 10px;
 }
 .one{
     transform: translateY(-10px);
-    margin-left: -4px;
+    margin-left: 2px;
 }
 .containers{
-    transform: translateY(9%);
     width: 80%;
     border-radius: 8px;
-    padding: 8px 22px 8px 10px;
+    padding: 8px 22px 8px 13px;
     font-size: 14px;
-    font-family: roboto;
-    font-weight: 300;
+    font-family: Roboto;
+    font-weight: 50;
     color: white;
     display: flex;
-    gap: 2em;
+    gap: 1.7em;
     cursor: pointer;
 }
 .containers:hover{
@@ -479,6 +481,7 @@ input::placeholder{
     padding-left: 3px;
     height: fit-content;
     display: none;
+    margin-top: -1.5px;
 }
 .left-nav-minimized p{
     font-size: 10px;
@@ -491,6 +494,7 @@ input::placeholder{
     border-radius: 8px;
     padding: 15px 2px;
     cursor: pointer;
+    align-items: center;
 }
 
 .containers-min:hover{
@@ -501,16 +505,13 @@ input::placeholder{
     transform: translateY(20%);
     font-family: roboto;
 }
-.left-nav img{
-    height: 20px;
-    width: 20px;
-    filter: invert(99%) sepia(0%) saturate(0%) hue-rotate(267deg) brightness(111%) contrast(100%);
+.svg-leftnav {
+    height: 24px;
+    width: 24px;
+    
+    
 }
-.left-nav-minimized img{
-    height: 20px;
-    width: 20px;
-    filter: invert(99%) sepia(0%) saturate(0%) hue-rotate(267deg) brightness(111%) contrast(100%);
-}
+
 .videos-container {
     display: flex;
     flex-wrap: wrap;
@@ -520,7 +521,6 @@ input::placeholder{
     padding: 10px 10px;
     height: 400vh;
     font-family: roboto;
-    
    
 }
 
@@ -542,7 +542,7 @@ input::placeholder{
 }
 
 .second{
-    
+    margin-top: 15px;
     transform: scale(1);
     margin-left: -14px;
 }
@@ -552,6 +552,7 @@ input::placeholder{
     padding-left: 10px;
     font-family: roboto;
     color: white;
+    padding-bottom: 5px;
 }
 
 .sub img{
@@ -581,6 +582,7 @@ video:hover{
     height: max-content;
     width: fit-content;
     transform: scale(.97); 
+    padding-bottom: 10px;
 }
 .vid-container img{
     height: 40px;
