--- a/Logged-in-version/files_for_homepage/logged-in.css
+++ b/Logged-in-version/files_for_homepage/logged-in.css
@@ -238,11 +238,9 @@ input::placeholder{
 .microphone button:hover{
     background-color: rgb(43, 43, 43);
 }
-.microphone img{
-    filter: invert(100%) sepia(6%) saturate(0%) hue-rotate(329deg) brightness(108%) contrast(101%);
-    transform: scale(.35);
-    margin-top: -8px;
-    
+.microphone .mic-svg{
+    margin-left: 7px;
+    margin-top: 4px;
 }
 .microphone button::after{
     border-radius: 5px;
@@ -531,7 +529,7 @@ input::placeholder{
     display: block;
 }
 .flex2{
-    transform: translateY(130px);
+    transform: translateY(100px);
     display: flex;
     flex-grow: 1;
     width: calc(100%-30px);
@@ -582,7 +580,7 @@ video:hover{
     height: max-content;
     width: fit-content;
     transform: scale(.97); 
-    padding-bottom: 10px;
+    margin-top: 30px;
 }
 .vid-container img{
     height: 40px;
